# rust_rinha-back-end-2023

./: .env  Cargo.toml  README.md
src/: main.rs
src/controller/: mod.rs  person_controller.rs  product_controller.rs
src/entity/: mod.rs  product.rs
src/repository/: db_config.rs  mod.rs  product_repository.rs  repository.rs
