[package]
name = "rinha-back-end-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
time = { version = "0.3.34",features = ["formatting", "parsing", "macros", "serde"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
